# mywifistats

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  collect.rs  config.rs  lan.rs  main.rs  model.rs  oui.rs  rate.rs  setup.rs  ui.rs  wifi.rs
src/router/: mod.rs  zte_f670l.rs
