[package]
name = "mywifistats"
version = "0.1.0"
edition = "2021"
description = "CLI/TUI dashboard for WiFi link stats, LAN devices, and router client info"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crossterm = "0.28"
dirs = "6"
hex = "0.4"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
